--- a/templates/navbar/writing_navbar.html
+++ b/templates/navbar/writing_navbar.html
@@ -29,5 +29,5 @@
 
 {% block head_scripts %}
     {{ block.super }}
-    <script src="{% static 'writing/nav_buttons.js' %}" ></script>
+    <script src="{% static 'navbar/nav_buttons.js' %}" ></script>
 {% endblock head_scripts %}
