Social Login - fix Facebook

--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -73,4 +73,5 @@
 {% block body_scripts %}
     {{ block.super }}
     <script src="{% static 'navbar/navbar.js' %}"> </script>
+    <script src="{% static 'navbar/nav_buttons.js' %}" ></script>
 {% endblock body_scripts %}
