--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -26,6 +26,11 @@
         </div>
     </div>
 
+    <footer style="position: fixed; bottom: 0; width: 100%; background-color: #ffc107; text-align: center; padding: 10px; z-index: 1000;">
+        Note: This website is in its pilot phase.
+        For any issues or inquiries, please contact us at <a href="mailto:bitedinfo@gmail.com">bitedinfo@gmail.com</a>.
+      </footer>
+
 {% endblock content %}
 
 <!-- 1. make tiles responsively shrinkable in height -->
