--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="grid-container">
-            {{ tiles }}
+             {{ template_tile }} 
         </div>
     </div>
 
