--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -4,7 +4,7 @@
 {% block head_links %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'home/home.css' %}"/>
-    <link rel="stylesheet" href="{% static 'tiles/base_tile_details.css' %}"/>
+    <link rel="stylesheet" href="{% static 'folders/base_folder_details.css' %}"/>
 {% endblock head_links %}
 
 {% block head_scripts %}
@@ -22,13 +22,25 @@
             </div>
         </div>
         <div class="grid-container">
-             {{ template_tile }} 
+             {{ template_folder }} 
         </div> {% endcomment %}
 
         <h1 class="select-subject-label"> Select Subject </h1>
         <div class="column-view"> 
             <div class="column-view-0 base-column">
-                <li class="list-group-item">Medicine</li>
+                <li class="list-group-item">
+                    <img src="{% static 'home/285658_blue_folder_icon.svg' %}" alt="" height="20px" width="20px">
+                    <span class='folder-name'>Medicine</span>
+                    <img src="{% static 'home/352072_arrow_play_icon.svg' %}" alt="" height="20px" width="20px">
+                </li>
+            </div>
+
+            <div class="column-view-1 base-column">
+                <li class="list-group-item">
+                    <img src="{% static 'home/285658_blue_folder_icon.svg' %}" alt="" height="20px" width="20px">
+                    <span class="folder-name">USMLE</span>
+                    <img src="{% static 'home/352072_arrow_play_icon.svg' %}" alt="" height="20px" width="20px">
+                </li>
             </div>
         </div>
         
@@ -42,4 +54,4 @@
 
 {% endblock content %}
 
-<!-- 1. make tiles responsively shrinkable in height -->
+<!-- 1. make folders responsively shrinkable in height -->
