--- a/static/home/home.css
+++ b/static/home/home.css
@@ -9,7 +9,7 @@
 /* :root is on top of all */
 /* by default height is auto which is size of content */
 /* http://phrogz.net/css/htmlvsbody.html */
-/* if scrollbar is from html folder why it disappears when I set 
+/* if scrollbar is from html tile why it disappears when I set 
 body::-webkit-scrollbar {display: none; } ?
 
 body is bigger that default html so html displays scrollbar
@@ -57,17 +57,20 @@ html,body {
     margin: 10px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     display: grid;
+    justify-content: space-evenly;
+    flex-direction: row;
+    gap: 10px;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
-
-    gap: 10px;
  }
  
- .base-column { box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+ .base-column {
+                 box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
                  rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, 
                  rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
                  padding: 10px;
-                 padding-right: 2px;
+                 flex: 1 1 0;
+                 /* width: 0; */
  }
 
  .select-subject-label{
@@ -100,16 +103,6 @@ html,body {
     position: fixed;
     flex-shrink: 0;
     z-index: 10;
-}
-
-.list-group-item{
-    display: flex;
-    gap: 5px;
-    align-items: flex-end;
-}
-
-.folder-name{
-    flex: 1;
 }
 
 .left-sidebar {
