--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -34,10 +34,10 @@
             {% endfor %}
         </ul>
     {% endif %} 
-    
+
     {% load socialaccount %}
     <div id="gSignInWrapper">
-        <a href="{% provider_login_url 'google' %}" class="customGPlusSignIn">
+        <a href="/accounts/google/login/" class="customGPlusSignIn">
           <div class="gsi-material-button-icon">
             <svg  class="svg-style" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path>
